test/good/Mismatch.hs
module Mismatch where

mismatch True True = False
mismatch False = id
