test/bad/check/CallTrue.hs
module CallTrue where

callTrue = True True
